--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="history">History</string>
     <string name="home">Home</string>
+    <string name="masuk">Masuk</string>
+    <string name="belum_memiliki_akun_daftar_sekarang">Belum memiliki akun? Daftar sekarang</string>
+    <string name="password">Password</string>
+    <string name="mulai_cek_kesehatan_mata_anda_secara_rutin_gratis_dengan_masuk_ke_aplikasi">Mulai cek kesehatan mata anda secara rutin gratis dengan masuk ke aplikasi</string>
+    <string name="sudah_memiliki_akun_login">Sudah memiliki akun? Login</string>
 </resources>
